--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,7 @@
 # Naval Prabhakar's NVL.API
 # Application Configuration
+spring:
+    mvc:
+        throw-exception-if-no-handler-found: true
+    resources: 
+        add-mappings: false   
