--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,4 +4,10 @@ spring:
     mvc:
         throw-exception-if-no-handler-found: true
     resources: 
-        add-mappings: false   
+        add-mappings: false
+
+server.port: 8443
+server.ssl.key-store: classpath:nvlapissl.pfx
+server.ssl.key-store-password: nvlapissl
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: nvlapissl
